# dotfiles

./: .gitignore  .zshrc  flake.nix  setup_links.sh
config/doom/: config.el  custom.el  init.el  packages.el
config/fish/functions/: e.fish  fish_prompt.fish  hm-s.fish  nd.fish  op-env.fish
config/ghostty/: config
config/op/: env.fish.tmpl
config/rofi/themes/: gruvbox-launcher.rasi
config/sway/: config  devices.conf  outputs.conf  workspaces.conf
emacs/: .emacs  dotemacs
fish/: config.fish
home-manager/: git.nix  home.nix  sway.nix
home-manager/waybar/: config.json
home-manager/zed/: keymap.json  settings.json
kpop/: AGENTS.md  Cargo.toml  DESIGN.md
kpop/k/: Cargo.toml
kpop/org/: Cargo.toml  GUIDE.md
kpop/org/src/: lib.rs  main.rs
kpop/tailscale-node-status/: Cargo.toml
org/: template.journal.org
org/journal/: 2025-10-13.org  2025-10-14.org  2025-10-15.org  2025-10-16.org  2025-10-17.org  2025-10-20.org  2025-10-21.org  2025-10-22.org  2025-10-23.org  2025-10-24.org  2025-10-25.org  2025-10-27.org  2025-10-28.org  2025-10-29.org  2025-10-30.org  2025-10-31.org  2025-11-02.org  2025-11-09.org  2025-11-10.org  2025-11-11.org  2025-11-12.org  2025-11-13.org
org/super/: ai.org  landing-page.org  launch_announcement.md
ranger/: rc.conf
zsh/: dotzshrc
