[package]
name = "org"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.6", features = ["serde"] }
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
